# vllm-gemma4-hetero-attn

./: .gitignore  CHANGELOG.md  CUSTOM_KERNELS.md  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
bench/: bench_decode.py  bench_longctx.py  gsm8k_eval.py  serve.sh  stop_server.sh
results/: bench_plugin_1k1k.json  bench_plugin_2500_250.json  bench_stock_1k1k.json  bench_stock_2500_250.json
src/vllm_gemma4_hetero_attn/: __init__.py  _patch.py
tests/: verify_patch.py
